--- a/src/Style/Register.scss
+++ b/src/Style/Register.scss
@@ -28,7 +28,6 @@
 		width: 400px;
 		border-radius: 20px;
 		border: 1px solid #fff;
-		/* filter: blur(8px); */
 		backdrop-filter: blur(4px);
 
 		.login-reg-heading {
@@ -51,36 +50,23 @@
 				width: 100%;
 				height: 40px;
 				box-sizing: border-box;
-				outline: none;
-				border: none;
-				padding: 0px 20px;
+				padding: 0px 10px;
 				background-color: transparent;
-				border-bottom: 1px solid #fff;
 				color: #fff;
 				font-size: 18px;
+				padding-right: 52px;
+				outline: none !important;
+				border: none;
+				border-bottom: 2px solid #fff;
+				box-shadow: none !important;
 
-				&:focus+label,
-				&:not(:placeholder-shown)+label {
-					top: -10px !important;
-				}
-				
-			}
-
-			label {
-				position: absolute;
-				top: 50%;
-				left: 10px;
-				transform: translateY(-50%);
-				font-size: 18px;
-				font-weight: 500;
-				color: #fff;
-				transition: .3s;
-
-				&:focus {
-					top: 0 !important;
-					transform: translateY(-50%) !important;
+				&::placeholder {
+					font-size: 18px;
+					font-weight: 500;
+					color: #fff;
 				}
 			}
+
 
 			.icon {
 				position: absolute;
@@ -90,26 +76,7 @@
 				color: #fff;
 			}
 		}
-
-		.rem {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			color: #fff;
-			font-size: 14px;
-
-			input {
-				margin-right: 5px;
-			}
-
-			a {
-				text-decoration: none;
-				margin-left: 5px;
-				color: #fff;
-				font-weight: bold;
-			}
-		}
-
+		
 		.login {
 			display: flex;
 			justify-content: center;
@@ -131,6 +98,7 @@
 				justify-content: center;
 				color: #000;
 				text-decoration: none;
+				border: 1px solid #fff;
 
 				&:hover {
 					cursor: pointer;
@@ -143,15 +111,20 @@
 
 	
 
-		.input_box input:focus~label,
-		.input_box input:valid~label {
-			top: -10px;
-		}
+		// .input_box input:focus~label,
+		// .input_box input:valid~label {
+		// 	top: -10px;
+		// }
 		// .input_box input:focus~label,
 		// .input_box input:valid~label,
 		// .input_box input:not(:placeholder-shown)~label {
 		// 	top: -10px;
 		// }
+
+		@media (max-width:576px ){
+		margin: 0 20px;	
+		}
+		
 	}
 }
 
