--- a/src/Style/Style.scss
+++ b/src/Style/Style.scss
@@ -1,3 +1,6 @@
+@import './var';
 @import './Register.scss';
 @import './common.scss';
 @import './sidebar.scss';
+@import './Nav.scss';
+@import './dashboard.scss';
