--- a/src/Style/sidebar.scss
+++ b/src/Style/sidebar.scss
@@ -1,9 +1,13 @@
-.list-group {
-    a{
-        &:hover{
-            background-color: blue;
-            color: #fff;
+.sidebar{
+    
+    .list-group {
+        a{
             cursor: pointer;
+            &:hover{
+                background-color: #ffa901;
+                color: #fff;
+                border-radius: 8px;
+            }
         }
     }
 }
