--- a/src/Style/Nav.scss
+++ b/src/Style/Nav.scss
@@ -1,23 +1,41 @@
 .input-group {
-  .form-control::placeholder {
-    font-size: 0.95rem;
-    color: #aaa;
-    font-style: italic;
+  .form-control {
+    &::placeholder {
+      font-size: 0.95rem;
+      color: #aaa;
+      font-style: italic;
+    }
+
+    &:focus {
+      box-shadow: none !important;
+    }
   }
 
   .btn {
     right: 0;
+    bottom: -2px;
   }
 }
 
 .navbar {
-  .toggler{
+  position: relative;
+
+  .toggler {
     margin-right: 12px;
+    z-index: 3;
+
+    @media (max-width: 478px) {
+      position: absolute;
+      right: 20px;
+    }
+
   }
+
   svg {
     color: $icon-clr;
   }
-  .bi-justify::before{
+
+  .bi-justify::before {
     color: $icon-clr;
   }
 }
