--- a/src/Style/common.scss
+++ b/src/Style/common.scss
@@ -6,3 +6,16 @@
  th, td{
   background-color: transparent !important;
  }
+
+ .bg-green{
+  background-color: $bg-clr2;
+ }
+ .bg-blue{
+  background-color: $bg-clr4;
+ }
+ .bg-yellow{
+  background-color: $bg-clr3;
+ }
+ .bg-pink{
+  background-color: $bg-clr5;
+ }
