--- a/src/Style/_var.scss
+++ b/src/Style/_var.scss
@@ -6,6 +6,7 @@ $bg-clr2:#d1f3e0;
 $bg-clr3:#fff2d8;
 $bg-clr4:#e1f1ff;
 $bg-clr5:#ffeaea;
+$btn-clr3: #e15959;
 $btn-clr1: #bcf0da;
 $btn-clr2: #fcd9bd;
 $btn-text1: #014737;
