--- a/src/Style/home.scss
+++ b/src/Style/home.scss
@@ -29,7 +29,7 @@
 
         .btn-block {
             color: $btn-text1;
-            background-color: $icon-clr;
+            background-color: $btn-clr3;
             border-radius: 12px;
             padding: 9px;
         }
