--- a/src/Style/Style.scss
+++ b/src/Style/Style.scss
@@ -4,5 +4,6 @@
 @import './sidebar.scss';
 @import './Nav.scss';
 @import './dashboard.scss';
-@import './home.scss';
-@import './AllStudents.scss'
+@import './AllSchools.scss';
+@import './AboutStudent.scss';
+@import './AllStudents.scss';
