--- a/src/Style/AllTeachers.scss
+++ b/src/Style/AllTeachers.scss
@@ -4,6 +4,7 @@
     gap: 2rem;
     padding: 1.5rem;
     flex-wrap: wrap;
+    justify-content: space-between;
     .add-btn{
         display: flex;
         align-items: center;
