--- a/src/Style/Nav.scss
+++ b/src/Style/Nav.scss
@@ -23,10 +23,15 @@
   .toggler {
     margin-right: 12px;
     z-index: 3;
-
+    @media (max-width: 1199px) {
+      position: absolute;
+      right: 20px;
+      top: 10px;
+    }
     @media (max-width: 478px) {
       position: absolute;
       right: 20px;
+      top: 10px;
     }
 
   }
@@ -37,5 +42,11 @@
 
   .bi-justify::before {
     color: $icon-clr;
+  }
+
+  div#collapsibleNavId {
+    @media (max-width: 1199px) {
+      display: none !important;
+    }
   }
 }
