--- a/src/Style/AboutStudent.scss
+++ b/src/Style/AboutStudent.scss
@@ -28,67 +28,90 @@
 
 // $border-color: black;
 
-$background-color-header: #f2f2f2;
-$padding: 10px;
+// $background-color-header: #f2f2f2;
+// $padding: 10px;
 
-.each-student {
-    display: flex;
-    justify-content: space-between;
+// .each-student {
+//     display: flex;
+//     justify-content: space-between;
 
-    .student-name {
-        padding: 40px 0 0px 9px;
+//     .student-name {
+//         padding: 40px 0 0px 9px;
 
-        h2 {
-            font-size: 25px;
-            padding-top: 20px;
+//         h2 {
+//             font-size: 25px;
+//             padding-top: 20px;
           
 
-            @media (max-width:576px ) {
-                font-size: 18px;
-                br {
-                    display: block;
-                }
-            }
+//             @media (max-width:576px ) {
+//                 font-size: 18px;
+//                 br {
+//                     display: block;
+//                 }
+//             }
 
+//         }
+//     }
+
+//     .student-img {
+//         width: 125px;
+//         height: 150px;
+//         border: 1px solid #000;
+//         padding-right: 50px;
+//         margin: 10px 15px 0 0;
+
+//         img {
+//             width: 125px;
+//             height: 150px;
+//             text-align: center;
+//             display: flex;
+//             justify-content: center;
+//             align-content: center;
+//         }
+
+//     }
+
+// }
+
+// .details-table {
+//     width: 100%;
+//     border-collapse: collapse;
+//     margin-top: 20px;
+//     margin-bottom: 20px;
+
+//     th,
+//     td {
+//         border: 1px solid #000;
+//         padding: $padding;
+//         text-align: left;
+//     }
+
+//     th {
+//         background-color: #FFFFFF;
+//     }
+
+
+// }
+
+.about-student {
+    padding-top: 30px;
+    margin: 0 30px;
+
+    .labal-title {
+        font-size: 20px;
+        font-weight: 400;
+        padding-bottom: 8px;
+    }
+    input {
+        box-shadow: none;
+        border: none;
+        &:focus {
+            box-shadow: none;
+            border: none;
+            outline: none;
         }
     }
 
-    .student-img {
-        width: 125px;
-        height: 150px;
-        border: 1px solid #000;
-        padding-right: 50px;
-        margin: 10px 15px 0 0;
-
-        img {
-            width: 125px;
-            height: 150px;
-            text-align: center;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-        }
-
-    }
-
-}
-
-.details-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    margin-bottom: 20px;
-
-    th,
-    td {
-        border: 1px solid #000;
-        padding: $padding;
-        text-align: left;
-    }
-
-    th {
-        background-color: #FFFFFF;
-    }
 
 
 }
