--- a/src/Style/Style.scss
+++ b/src/Style/Style.scss
@@ -7,5 +7,6 @@
 @import './AllSchools.scss';
 @import './AboutStudent.scss';
 @import './AllStudents.scss';
-// @import './home.scss';
+@import './addteacher.scss';
 @import './AllTeachers.scss';
+@import './addimg.scss';
