--- a/src/Style/_var.scss
+++ b/src/Style/_var.scss
@@ -11,4 +11,6 @@ $btn-clr1: #bcf0da;
 $btn-clr2: #fcd9bd;
 $btn-text1: #014737;
 $btn-text2: #771d1d;
-
+$form-label: #4b5563;
+$form-bg: #f0f1f3;
+$icon-clr2: #0a00f5;
