--- a/src/Style/common.scss
+++ b/src/Style/common.scss
@@ -25,3 +25,17 @@
  i.bi.bi-justify {
   display: none !important;
 }
+.form-control:focus{
+  box-shadow: unset !important;
+  border-color: unset !important;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
