--- a/src/Style/common.scss
+++ b/src/Style/common.scss
@@ -22,3 +22,12 @@
  .bg-pink{
   background-color: $bg-clr5;
  }
+
+
+ input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
