--- a/src/Style/common.scss
+++ b/src/Style/common.scss
@@ -48,3 +48,14 @@ input[type=number] {
   -moz-appearance: textfield;
   appearance: none;
 }
+
+
+@media(max-width:400px) {
+
+  html,
+  body {
+      margin: 0 !important;
+      padding: 0 !important;
+      overflow-x: hidden !important;
+  }
+}
