--- a/src/Style/addteacher.scss
+++ b/src/Style/addteacher.scss
@@ -32,7 +32,14 @@
             background-color: $btn-clr1;
             border: none;
             border-radius: 12px;
-            padding: 12px 26px;
+            padding: 12px 40px;
+            font-size: 18px;
+            font-weight: 500;
+        }
+        .add-btn{
+            border: none;
+            border-radius: 12px;
+            padding: 12px 20px;
             font-size: 18px;
             font-weight: 500;
         }
