--- a/src/Style/AllSchools.scss
+++ b/src/Style/AllSchools.scss
@@ -25,6 +25,7 @@
             background-color: $btn-clr2;
             border-radius: 12px;
             padding: 9px;
+            border: none;
         }
 
         .btn-block {
