--- a/src/Style/AboutStudent.scss
+++ b/src/Style/AboutStudent.scss
@@ -82,6 +82,15 @@
 
             }
         }
+        textarea {
+            
+            &:focus {
+                box-shadow: none;
+                outline: none;
+                border: var(--bs-border-width) solid var(--bs-border-color);
+
+            }
+        }
 
     }
 
