--- a/src/Style/Nav.scss
+++ b/src/Style/Nav.scss
@@ -49,4 +49,37 @@
       display: none !important;
     }
   }
+  .round-image {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+  }
+  
+  .round-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  
+  .dropdown-menu {
+    position: absolute;
+    top: 160px;
+    left: 0;
+    background-color: white;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    list-style-type: none;
+    padding: 10px;
+    margin: 0;
+  }
+  
+  .dropdown-menu li {
+    padding: 8px 16px;
+    cursor: pointer;
+  }
+  
+  .dropdown-menu li:hover {
+    background-color: #f0f0f0;
+  }
 }
