--- a/src/Style/Login.scss
+++ b/src/Style/Login.scss
@@ -1,131 +1,162 @@
-*{
-	padding: 0;
-	margin: 0;
+$bg-orange: #F4EEE5;
+$ClrOrange: #f37335;
+$textClr:#2b2b2b;
+$btn-bg: #565e64;
+$black:#000;
+$pclr: #575757;
+
+.form-section {
+  position: relative;
+  margin: 0 auto;
+  height: 100vh;
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &::after {
+    content: '';
+    background: url("../Images/bg-ss2.jpg");
+    background-attachment: fixed;
+    background-size: cover;
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    backdrop-filter: brightness(0.8);
+    filter: brightness(0.8);
+  }
+
+  @media (max-width: 400px) {
+    background-position: center;
+  }
+
+  .main-form {
+    width: 470px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    border-radius: 20px;
+    padding: 80px 30px;
+    z-index: 100;
+    margin-top: 80px;
+    backdrop-filter: blur(20px);
+    background-color: $white;
+    position: relative;
+    z-index: 99;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+    @media (max-width: 450px) {
+      width: 100%;
+    }
+
+    .form-heading {
+      align-items: center;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column-reverse;
+
+      h1 {
+        color: $textClr;
+        font-weight: 700;
+        z-index: 1;
+        position: relative;
+      }
+
+      .dropdown {
+        width: 100%;
+
+        .dropdown-toggle {
+          width: 100%;
+          font-weight: 600 !important;
+        }
+
+        .dropdown-menu {
+          width: 100%;
+          opacity: 0;
+          transform: translateY(10px);
+          transition: opacity 0.3s ease, transform 0.3s ease;
+          background-color: $bg-orange;
+
+          &.show {
+            opacity: 1;
+            transform: translateY(0);
+            background-color: $btn-bg;
+            color: $white;
+          }
+
+          .dropdown-item {
+            border-radius: 5px;
+            padding: 8px 0;
+            text-align: center;
+            font-weight: 600;
+
+            &:hover {
+              background-color: $bg-orange !important;
+              border-radius: 5px;
+              color: $black !important;
+            }
+          }
+        }
+      }
+    }
+
+    .input-filed {
+      .select {
+        color: $white;
+        margin: 10px;
+      }
+
+      input,
+      select {
+        padding: 10px 48px 10px 10px;
+        margin: 10px;
+        outline: none;
+
+        &:focus {
+          outline: none;
+          box-shadow: none;
+          border-color: #dee2e6;
+        }
+      }
+
+      svg {
+        position: absolute;
+        right: 8px;
+        top: 22px;
+      }
+    }
+
+    .forget-link {
+      color: $pclr;
+      text-align: end;
+      margin: 4px 0 12px 0;
+    }
+
+    .signIn-btn {
+      padding: 10px 0;
+      border-radius: 10px;
+      margin-top: 10px;
+      border: none;
+      font-size: 18px;
+      font-weight: 600;
+      margin: 10px;
+      margin-top: 20px;
+      background-color: $ClrOrange;
+      color: $white;
+      transition: 0.3s all ease-in-out;
+
+      &:focus {
+        box-shadow: none !important;
+      }
+    }
+  }
 }
-
-.container{
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://c4.wallpaperflare.com/wallpaper/531/951/621/digital-digital-art-artwork-illustration-minimalism-hd-wallpaper-preview.jpg);
-	background-size: cover;
-
-}
-
-
-
-
-h1{
-	text-align:center;
-	margin-bottom: 20px;
-	font-size:40px;
-	color:#FFF;
-}
-
-.input_box{
-	width: 90%;
-	margin: auto;
-	height: 40px;
-	position: relative;
-	margin-bottom: 20px;
-}
-
-.input_box input{
-	width: 100%;
-    height:40px;
-	box-sizing: border-box;
-	outline: none;
-	border: none;
-    padding: 0px 20px;
-	background-color:transparent;
-	border-bottom: 1px solid #fff;
-	color: #fff;
-	font-size: 18px;
-}
-
-.input_box label{
-	position: absolute;
-	top: 50%;
-	left: 10px;
-	transform:translateY(-50%);
-	font-size:18px;
-	font-weight:500;
-	color: #FFF;
-	transition: .3s;
-}
-
-.icon{
-	position: absolute;
-	top: 50%;
-	right: 10px;
-	transform: translateY(-100%);
-	color: #fff;
-}
-
-.rem{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color:#fff;
-	font-size: 14px;
-}
-
-.rem input{
-	margin-right: 5px;
-}
-
-.rem a{
-	text-decoration: none;
-	margin-left:5px;
-	color:#fff;
-	font-weight: bold;
-}
-
-.login{
-	display: flex;
-	justify-content: center;
-}
-
-.login button{
-	width: 200px;
-	height:40px;
-	margin-top:20px;
-	border-radius: 20px;
-	font-size:18px;
-	font-weight:bold;
-	background-color: #fff;
-	border: none;
-	outline:none;
-	transition: .3s;
-}
-
-.reg{
-	display: flex;
-	justify-content: center;
-	margin-top:20px;
-	font-size: 14px;
-	color: #ffff;
-}
-
-.reg a{
-	text-decoration: none;
-	margin-left: 5px;
-	color: #fff;
-	font-weight: bold;
-}
-
-
-.input_box input:focus ~ label,
-.input_box input:valid ~ label{
-	top: 0;
- }
-
-
- .login button:hover{
-	cursor: pointer;
-	background-color:transparent;
-	color:#fff;
-	border: 1px solid #fff;
- }
