--- a/src/Style/AboutStudent.scss
+++ b/src/Style/AboutStudent.scss
@@ -118,17 +118,19 @@
 
     .student-edit-btn {
         display: flex;
-        justify-content: end;
 
         .student-edit {
             display: flex;
             align-items: center;
             gap: 0.2rem;
-            background-color: $btn-clr4;
+            background-color: #14A44D;
             color: #000;
             border-radius: 8px;
             padding: 8px;
             color: $white;
+            font-weight: 600;
+            border: none;
+            padding: 12px;
         }
     }
 
