--- a/src/Style/Feehistory.scss
+++ b/src/Style/Feehistory.scss
@@ -5,8 +5,30 @@
         }
 
     }
-    .total-fee {
-        color: #888;
+
+    .for-fee {
+        color: #706b6b;
     }
-    
+
+    .pending-fee {
+        position: relative;
+
+        &::after {
+            position: absolute;
+            content: '';
+            left: 0;
+            bottom: 0;
+            background-color: #000;
+            width: 120px;
+            height: 2px;
+
+        }
+    }
+
+    .pending-fee2 {
+       color: #000;
+        font-weight: 600;
+        
+    }
+
 }
