--- a/src/Style/_var.scss
+++ b/src/Style/_var.scss
@@ -1,4 +1,4 @@
-$bg-clr: #F0F1F3;
+$bg-clr: #f0f1f3;
 $icon-clr: #b3a3a3;
 $white : #ffffff;
 $primary-clr: #FFA401;
@@ -17,3 +17,8 @@ $form-bg: #f0f1f3;
 $icon-clr2: #0a00f5;
 $bg-drop: #EAF1FB;
 $bg-hover: #c7d9f3;
+$bg-item: #187b98;
+$black: #000000;
+
+$primary-color2: #00cec9;
+$bg-color: #dfe6e9;
