--- a/src/Style/common.scss
+++ b/src/Style/common.scss
@@ -40,10 +40,12 @@ input[type=number]::-webkit-outer-spin-button {
   i.bi.bi-justify {
     display: none !important;
   }
-  .form-control{
+
+  .form-control {
     box-shadow: none !important;
     border-color: unset !important;
   }
+
   .form-control:focus {
     box-shadow: unset !important;
     border-color: unset !important;
@@ -71,4 +73,16 @@ input[type=number] {
     padding: 0 !important;
     overflow-x: hidden !important;
   }
+}
+
+.dash {
+  background-image: url(../Images/bg1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.sidebar {
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.5);
 }
