--- a/src/Style/AboutStudent.scss
+++ b/src/Style/AboutStudent.scss
@@ -115,7 +115,10 @@
             border: var(--bs-border-width) solid var(--bs-border-color);
         }
     }
-
+    .for-edit-btn {
+        display: flex;
+        justify-content: space-between;
+        
     .student-edit-btn {
         display: flex;
 
@@ -132,6 +135,7 @@
             border: none;
             padding: 12px;
         }
+    }
     }
 
 
