--- a/src/Style/AboutStudent.scss
+++ b/src/Style/AboutStudent.scss
@@ -126,7 +126,8 @@
             display: flex;
             align-items: center;
             gap: 0.2rem;
-            background-color: #14A44D;
+            // background-color: #14A44D;
+            background-color: #007CAF;
             color: #000;
             border-radius: 8px;
             padding: 8px;
