--- a/src/Style/Style.scss
+++ b/src/Style/Style.scss
@@ -14,4 +14,5 @@
 @import './login.scss';
 @import './FeeCounter.scss';
 @import './Feehistory.scss';
-@import './Addstudent.scss'
+@import './Addstudent.scss';
+@import './Bookpreloader.scss';
