--- a/src/Style/sidebar.scss
+++ b/src/Style/sidebar.scss
@@ -1,5 +1,9 @@
 .sidebar {
     transition: transform 0.5s ease;
+    z-index: 1;
+    @media (max-width:767px) {
+        z-index: 3 !important;
+    }
 
     .list-group {
         a {
