--- a/src/Style/sidebar.scss
+++ b/src/Style/sidebar.scss
@@ -10,7 +10,8 @@
             color: $white !important;
 
             &:hover {
-                background-color: #ffa901 !important;
+                // background-color: #ffa901 !important;
+                background-color: #00CEC9 !important;
                 color: #fff;
                 border-radius: 8px;
             }
@@ -44,7 +45,7 @@
         border: unset !important;
 
         &:hover {
-            background-color: #ffa901 !important;
+            background-color: #00CEC9 !important;
 
         }
     }
