--- a/src/Style/AllTeachers.scss
+++ b/src/Style/AllTeachers.scss
@@ -8,7 +8,7 @@
     
 }
 .add-btn{
-    display: flex;
+    display: flex !important;
     align-items: center;
     gap: 0.2rem;
     background-color: $btn-clr1 !important;
