--- a/src/Style/Addstudent.scss
+++ b/src/Style/Addstudent.scss
@@ -15,3 +15,11 @@ select {
         border-color: #dee2e6 !important;
     }
 }
+
+svg.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.delete-icon.css-i4bv87-MuiSvgIcon-root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+    margin-top: 4px;
+}
