--- a/src/Style/FeeCounter.scss
+++ b/src/Style/FeeCounter.scss
@@ -7,6 +7,7 @@
         margin-bottom: 30px;
         margin-top: 30px;
     }
+
     .for-edit-btn {
         display: flex;
         justify-content: space-between;
@@ -17,7 +18,7 @@
                     display: flex;
                     align-items: center;
                     gap: 0.2rem;
-                    background-color: #14A44D;
+                    background-color: #187b98;
                     color: #000;
                     border-radius: 8px;
                     padding: 8px;
@@ -25,13 +26,21 @@
                     font-weight: 600;
                     border: none;
                     padding: 12px;
+                    transition: 0.2s all;
+
+                    &:hover {
+                        background-color: #00CEC9;
+                        transition: 0.2s all;
+
+                    }
                 }
-    
+
             }
-    
+
         }
+
         .fee-edit-btn2 {
-    
+
             .student-edit-btn {
                 .student-edit {
                     display: flex;
@@ -46,34 +55,37 @@
                     border: none;
                     padding: 12px;
                 }
-    
+
             }
-    
+
         }
 
     }
- 
+
     .for-student-img {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100%; 
+        width: 100%;
         flex-direction: column;
 
         img {
             width: 170px;
             height: 170px;
             border-radius: 20px;
-            
+
         }
-        p{
+
+        p {
             padding-top: 10px;
             font-size: 24px;
             font-weight: 600;
         }
     }
+
     .for-student-input {
         padding-top: 10px;
+
         input {
             &:focus-within {
                 box-shadow: none;
@@ -81,12 +93,14 @@
 
 
             }
+
             select {
                 &:focus-within {
                     box-shadow: none;
                     border-color: #dee2e6;
+                }
             }
         }
-    }
 
-}}
+    }
+}
