--- a/src/Style/AllSchools.scss
+++ b/src/Style/AllSchools.scss
@@ -35,15 +35,15 @@
             // background-color: $btn-clr3;
             // border-radius: 12px;
             // padding: 9px;
-                color: #fff;
-                background-color: #e15959;
-                border-radius: 12px;
-                padding: 9px;
-                box-shadow: none;
-                border: none;
-                font-size: 14px;
-                width: 75px;
-                text-align: center;
+            color: #fff;
+            background-color: #e15959;
+            border-radius: 12px;
+            padding: 9px;
+            box-shadow: none;
+            border: none;
+            font-size: 14px;
+            width: 75px;
+            text-align: center;
         }
 
         .table-heading {
@@ -59,8 +59,13 @@
 }
 
 .table>:not(caption)>*>* {
-    padding: 1rem 0.5rem !important;
+    padding: 1rem 1.5rem !important;
+
+    @media (max-width:479px) {
+        padding: 1rem 1rem !important;
+    }
 }
+
 .d-link {
     color: #000;
 }
