--- a/src/Style/AllSchools.scss
+++ b/src/Style/AllSchools.scss
@@ -59,8 +59,16 @@
 }
 
 .table>:not(caption)>*>* {
-    padding: 1rem 0.5rem !important;
+    padding: 1rem 1.5rem !important;
 }
+
 .d-link {
     color: #000;
+}
+
+@media (max-width:479px) {
+    .table>:not(caption)>*>* {
+        padding: 1rem 1rem !important;
+    }
+
 }
