--- a/src/Style/common.scss
+++ b/src/Style/common.scss
@@ -76,7 +76,8 @@ input[type=number] {
 }
 
 .dash {
-  background-image: url(../Images/bg1.jpg);
+  // background-image: url(../Images/bg1.jpg);
+  background-image: url(../Images/bgmain.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
