--- a/src/Style/Feehistory.scss
+++ b/src/Style/Feehistory.scss
@@ -1,30 +1,44 @@
-.table-responsive {
-    .table {
-        .fee-student {
-            font-size: 16px;
-        }
+// .table-responsive {
+//     .table {
+//         .fee-student {
+//             font-size: 16px;
+//         }
 
-    }
+//     }
 
-    .for-fee {
-        // color: #706b6b;
-        color: #272222;
-    }
+//     .for-fee {
+//         // color: #706b6b;
+//         color: #272222;
+//     }
 
-    .pending-fee {
-        position: relative;
-    }
+//     .pending-fee {
+//         position: relative;
+//     }
 
-    .pending-fee2 {
-       color: #000;
-        font-weight: 600;
+//     .pending-fee2 {
+//        color: #000;
+//         font-weight: 600;
         
-    }
+//     }
 
-    .for-hightlight{
-        color: #000;
-        font-weight: 600;
-    }
+//     .for-hightlight{
+//         color: #000;
+//         font-weight: 600;
+//     }
 
+
+// }
+
+.fee-main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 150px;
+
+    
+    .fee-table-main {
+        background-color: #fff;
+        padding: 30px 0;
+    }
 
 }
