--- a/src/Style/home.scss
+++ b/src/Style/home.scss
@@ -46,9 +46,10 @@
     z-index: 2;
     transition: all .4s ease-in;
     .d-link{
-        color: $black;
+        color: #00CEC9;
         font-weight: 500;
         font-size: 22px !important;
+    }
 
     }
-}
+
