--- a/src/Style/AllTeachers.scss
+++ b/src/Style/AllTeachers.scss
@@ -23,3 +23,28 @@
     color: red !important;
 }
 
+.table {
+    position: relative;
+    tr {
+        &:nth-child(2) {
+            margin-top: 20px;
+        }
+    }
+    .its-t-head {
+        position: sticky;
+        top: 0;
+        background:#187b98 ;
+        color: #fff !important;
+        tr {
+          th {
+            color: #fff;
+          }
+        }
+    }
+}
+
+.t-custom {
+    background: white;
+    position: relative;
+    margin-top: 30px;
+}
