--- a/src/Style/Feehistory.scss
+++ b/src/Style/Feehistory.scss
@@ -18,7 +18,7 @@
 //     .pending-fee2 {
 //        color: #000;
 //         font-weight: 600;
-        
+
 //     }
 
 //     .for-hightlight{
@@ -29,16 +29,121 @@
 
 // }
 
-.fee-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 150px;
+// .fee-main{
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     padding-top: 150px;
 
+
+//     .fee-table-main {
+//         background-color: #fff;
+//         padding: 30px 0;
+//     }
+
+// }
+
+
+
+
+.fee-table {
+    background-color: #fff;
+    margin: 80px auto;
+    border-radius: 10px;
+    width: 50%;
+    padding:50px 25px 50px 25px;
+    border: 2px solid #000;
     
-    .fee-table-main {
-        background-color: #fff;
-        padding: 30px 0;
+    
+
+   
+    .fee-table-custom {
+        margin-top: 20px;
+
+        .table-heading {
+            text-align: center !important;
+            width: 100%;
+        }
+
+        .table-des-heading {
+            text-align: center;
+            width: 100%;
+           padding: 15px 0;
+        }
     }
+
+    .student-fee-info {
+        padding: 0 5px;
+        display: flex;
+        justify-content: space-between;
+
+        .f-s-name {
+            font-size: 19px;
+            font-weight: 500;
+            text-transform: capitalize;
+        }
+
+        .f-s-rollno {
+            font-size: 19px;
+            font-weight: 500;
+
+        }
+    }
+
+    .table {
+        margin-top: 17px;
+        padding: 0 20px !important;
+
+        .total-fees {
+            // border: 2px solid #000;
+            // font-weight: 600;
+            border: 1px solid #000;
+            // text-align: center;
+      
+
+        }
+
+        .f-panding {
+            border: 2px solid #000;
+            font-weight: 600;
+
+            .for-highlight {
+                margin: 0 !important;
+            }
+
+
+
+        }
+
+        .f-tbody {
+            padding-right: 20px !important;
+        }
+
+        .t-fee-sign {
+            text-align: end;
+        }
+
+        .pending-fee {
+            border: 1px solid #000;
+        }
+
+        .fee-date {
+            border: 1px solid #000;
+        }
+
+        .for-d-f {
+            border: 1px solid #000 !important;
+        }
+        .b-none {
+            border: none !important;
+        }
+    }
+
+    .t-fee-sign {
+        text-align: end;
+        font-size: 22px;
+        padding: 80px 30px 0 0;
+    }
+
 
 }
