--- a/src/Style/common.scss
+++ b/src/Style/common.scss
@@ -106,45 +106,46 @@ input[type=number] {
 
 
 /* styles.css (or any appropriate CSS file) */
-.table-container {
-  overflow-y: auto;
-  max-height: 100%; /* Adjust the height as needed */
-}
-.fixed-header-one {
-  position: sticky;
-  top: 0;
-  background-color: white; /* Ensure the background is white for header visibility */
-  z-index: 10; /* Ensure it's above other content */
 
-  @media (max-width:768px) {
-    position: static;
-  }
+// .table-container {
+//   overflow-y: auto;
+//   max-height: 100%; /* Adjust the height as needed */
+// }
+// .fixed-header-one {
+//   position: sticky;
+//   top: 0;
+//   background-color: white; /* Ensure the background is white for header visibility */
+//   z-index: 10; /* Ensure it's above other content */
+
+//   @media (max-width:768px) {
+//     position: static;
+//   }
 
 
   
-}
-.fixed-header {
-  padding-bottom: 10px;
-  @media (max-width:768px) {
-    position: static;
-  }
+// }
+// .fixed-header {
+//   padding-bottom: 10px;
+//   @media (max-width:768px) {
+//     position: static;
+//   }
 
-}
-.fixed-header th {
-  position: sticky;
-  top: 70px;
-  background-color: #187b98 !important; /* Ensure the background is white for header visibility */
-  z-index: 10; /* Ensure it's above other content */
-  color: #fff !important;
-  font-weight: 500;
+// }
+// .fixed-header th {
+//   position: sticky;
+//   top: 70px;
+//   background-color: #187b98 !important; /* Ensure the background is white for header visibility */
+//   z-index: 10; /* Ensure it's above other content */
+//   color: #fff !important;
+//   font-weight: 500;
 
 
-  @media (max-width:768px) {
-    position: static;
-  }
+//   @media (max-width:768px) {
+//     position: static;
+//   }
 
   
-}
+// }
 
 
 .table-container {
@@ -158,4 +159,30 @@ input[type=number] {
   svg {
     color:red;
   }
+}
+
+
+.table {
+  position: relative;
+  tr {
+      &:nth-child(2) {
+          margin-top: 20px;
+      }
+  }
+  .its-t-head {
+      position: sticky;
+      top: 0;
+      background:#187b98 ;
+      color: #fff !important;
+      tr {
+        th {
+          color: #fff;
+        }
+      }
+  }
+}
+
+.t-custom {
+  background: white;
+  position: relative;
 }
