--- a/src/Style/sidebar.scss
+++ b/src/Style/sidebar.scss
@@ -1,3 +1,8 @@
+.school-logo-img {
+    width: 30px;
+    height: 20px;
+}
+
 .sidebar {
     transition: transform 0.5s ease;
     z-index: 1;
@@ -58,3 +63,4 @@
         }
     }
 }
+
