--- a/src/Style/Feehistory.scss
+++ b/src/Style/Feehistory.scss
@@ -51,12 +51,24 @@
     margin: 80px auto;
     border-radius: 10px;
     width: 50%;
-    padding:50px 25px 50px 25px;
+    padding: 50px 25px 50px 25px;
     border: 2px solid #000;
-    
-    
 
-   
+    @media (max-width:1200px) {
+        width: 80%;
+    }
+
+    @media (max-width:800px) {
+        width: 90%;
+    }
+
+    @media (max-width:768px) {
+        width: 100%;
+    }
+
+
+
+
     .fee-table-custom {
         margin-top: 20px;
 
@@ -68,7 +80,7 @@
         .table-des-heading {
             text-align: center;
             width: 100%;
-           padding: 15px 0;
+            padding: 15px 0;
         }
     }
 
@@ -76,6 +88,12 @@
         padding: 0 5px;
         display: flex;
         justify-content: space-between;
+
+
+        @media (max-width:1200px) {
+            flex-direction: column;
+            justify-content: center;
+        }
 
         .f-s-name {
             font-size: 19px;
@@ -99,7 +117,7 @@
             // font-weight: 600;
             border: 1px solid #000;
             // text-align: center;
-      
+
 
         }
 
@@ -134,6 +152,7 @@
         .for-d-f {
             border: 1px solid #000 !important;
         }
+
         .b-none {
             border: none !important;
         }
