--- a/src/Style/Style.scss
+++ b/src/Style/Style.scss
@@ -19,3 +19,6 @@
 @import './Addstudent.scss';
 @import './Bookpreloader.scss';
 @import './Feehistory.scss';
+@import './home.scss';
+@import './Celendar.scss';
+@import './slider.scss';
