--- a/src/Style/_var.scss
+++ b/src/Style/_var.scss
@@ -22,3 +22,9 @@ $black: #000000;
 
 $primary-color2: #00cec9;
 $bg-color: #dfe6e9;
+
+$blue_primary:#00CEC9;
+
+$light_orange: #FFF8EB ; 
+
+$dark_yellow: #FF9B24 ;
