--- a/src/Style/AllTeachers.scss
+++ b/src/Style/AllTeachers.scss
@@ -33,7 +33,7 @@
     .its-t-head {
         position: sticky;
         top: 0;
-        background:#187b98 ;
+        background-color: $bg-item;
         color: #fff !important;
         tr {
           th {
